Add OpenApi generator dependencies